--- a/Abstract/Abstract.tex
+++ b/Abstract/Abstract.tex
@@ -1,3 +1,5 @@
-
-
 \chapter*{Abstract}
+
+Die vorliegende Masterarbeit analysiert den aktuellen Stand der Digitalisierung im Handwerk, sowie kleinen und mittleren Unternehmen und findet auf dieser Grundlage Bereiche, die Unterstützung benötigen. Darauf basierend wird ein Augmented Reality Applikation für Fliesenleger entwickelt und ihr Mehrwert für Handwerker bestimmt. Durch eine Fokusgruppe und eine Ethnographie werden Daten zu Problemen von Handwerkern erhoben und Ansätze für ein Unterstützungswerkzeug gefunden. Daraus wird eine Microsoft HoloLens Applikation für Fliesenleger mithilfe von gestaltungsorientierter Forschung implementiert, welche anschließend mit Handwerkern durch einen Fragebogen und ein Interview evaluiert wird. Die Ergebnisse bestätigen die Annahme, dass Augmented Reality als Visualisierungswerkzeug für Kundengespräche und zur Unterstützung bei der Arbeit für Handwerker interessant ist. Schlussfolgernd lässt sich sagen, dass Datenbrillen für Augmented Reality noch nicht genügend ausgereift sind, in Zukunft jedoch für Handwerker interessant sein können.
+
+The present master thesis analyses the current state of digitisation in crafts, as well as small and medium-sized enterprises, and on this basis finds areas that require support. Based on this, an Augmented Reality application for tilers will be developed and its added value for craftsmen will be determined. Through a focus group and an ethnography data on problems of craftsmen will be collected and approaches for a support tool will be found. From this, a Microsoft HoloLens application for tilers will be implemented using design science, which will then be evaluated with craftsmen through a questionnaire and an interview. The results confirm the assumption that Augmented Reality is interesting for craftsmen as a visualization tool, for advising customers and to support their work. In conclusion, it can be said that head mounted displays for augmented reality are not yet sufficiently mature, but may be interesting for craftsmen in the future.
