--- a/Kapitel/Kapitel8.tex
+++ b/Kapitel/Kapitel8.tex
@@ -16,3 +16,14 @@ Dieses wurde in Kapitel 7 mit zehn Handwerkern nachgespielt und evaluiert. Die A
 Die Unterstützung für das Kundengespräch empfanden sie als gut hilfreich und gaben an diese nutzen zu wollen, wäre diese Applikation für sie verfügbar. \\
 Gemischte Aussagen gaben sie zu dem Verlegeassistenten. Bei diesem bemängelten sie die Genauigkeit, könnten das aber eventuell durch die Nutzung von Lasern ausgleichen. Obwohl hier die Ergebnisse nicht so eindeutig positiv waren wie für das Werkzeug für das Kundengespräch, gaben die Handwerker doch an es gerne nutzen zu wollen. \\
 Insgesamt sehen sie hohes Potential in der Nutzung von AR für Fliesenleger aber auch für weitere Handwerksberufe, sobald die Technik robuster, ausgereifter und genauer ist. Dann könnte die Applikation noch mit anderen Systemen, wie beispielsweise CAD Programmen kombiniert werden, um ihre Effektivität zu steigern.
+
+Bezugnehmend auf die Forschungsfragen, wie der Stand der Digitalisierung in KMUs und Handwerksbetrieben ist, welche Features eine Applikation zur Unterstützung von Handwerkern aufweisen sollte und welcher Mehrwert aus einer solchen AR App für Handwerker entsteht, lässt sich folgendes sagen. Sie nutzen teilweise technische Hilfsmittel, wie Laser oder CAD Systeme, um präziser Arbeiten zu können. Im Vergleich zu großen Firmen nutzen sie ihr Potential nicht aus, da das Risiko und die Kosten meist zu hoch sind und das Know-how fehlt. \\
+Bei den Nachforschungen wurde deutlich, dass besonders die Abstimmung mit Kunden schwierig sei, da diese kein Vorstellungsvermögen hätten. Auch beim Arbeiten würden sie Hilfe begrüßen. Applikationen für Handwerker, genauer Fliesenleger, könnten also als Unterstützungswerkzeuge für Kundengespräche und für die Arbeit ansetzen. Dabei helfen sie als Visualisierungs- und Planungswerkzeug, sowie automatischer Vermessungs- und Verlegeassistent. Diese Hilfsmittel lassen sich gut mit Augmented Reality Datenbrillen, welche dem Handwerker die Hände zum Arbeiten freihalten, realisieren. \\
+Die Nutzung von AR für diese Zwecke begeisterte alle Handwerker. Sie könnten damit gut ihre Pläne für Kunden visualisieren und so besser mit ihnen kommunizieren. Das könne die Kundenzufriedenheit und die Qualität ihrer Arbeit verbessern. Sie würden die Technologie gerne jetzt schon nutzen. Zusätzlich ließe sich damit Zeit beim Vermessen der Räume sparen und schnell ein grober Überblick über die Randdaten schaffen. Ihre Meinungen zur Nützlichkeit eines Assistenzsystems für das Verlegen der Fliesen, die tatsächliche Arbeit, waren gemischt. Trotzdem würden sie der Technologie auch dafür eine Chance geben. Insgesamt sähen sie für die Verwendung ähnlicher AR Applikationen großes Potential für die Zukunft für verschiedenste Handwerksberufe.
+
+Der Stand der Digitalisierung in KMUs deckt sich mit der Aussage von Krcmar \cite{hateful_six_krcmar}. Es gibt zwar technische Unterstützungssysteme, wie CAD Programme, Laser, oder Verwaltungsprogramme jedoch werden diese nicht von allen genutzt. Viele sehen den Mehrwert dieser Anwendungen nicht oder denken sie würden ihnen keinen großen Vorteil bringen. Auch wenn sie dafür großes Potential in Augmented Reality sehen, ist die Technologie noch nicht ausgereift genug für den kommerziellen Markt und vor allem für den Einsatz auf Baustellen. Die Microsoft HoloLens ist eines der fortgeschrittensten Geräte auf ihrem Gebiet, jedoch arbeitet sie noch zu ungenau. Um Punkte präzise zu setzen wird Geduld benötigt und der Kopf muss ruhig gehalten werden. Das ist auf einer Baustelle nicht einfach. Gleichzeitig ist sie ein großes, instabiles, leicht zerkratzbares Gerät und damit ungeeignet für raue Bedingungen. \\
+In dieser Arbeit sollte auch kein Produkt für den Verkauf entwickelt, sondern ein \textit{Proof of Concept}, ober Handwerker sich vorstellen könnten in Zukunft mit dieser Technologie zu arbeiten und ob sie darin einen Mehrwert sehen würden. Da das Programm nur in einem fiktiven Szenario getestet wurde, lässt sich keine klare Aussage darüber treffen, ob es in einem realen Szenario die Probleme der Handwerker vermindern und Zeit sparen würde. Gleichzeitig sind 10 Probanden keine aussagekräftige Testmenge wodurch alle Aussagen dieser Arbeit mehr Vermutungen sind und genauer, mit mehr Probanden getestet werden müssen.
+
+Schlussfolgernd lässt sich sagen, dass das Kundengespräch eines der größten Probleme der Handwerker darstellt und sie für dessen Lösung hohes Potential in AR Applikationen sehen. Vor allem, da es noch keine Hilfsmittel dafür gibt, die direkt im Feld angewandt werden können. Ein Planungstool, mit welchem man schnell vermessen und mit anderen zusammen planen kann ist gefragt. Der Verlegeassistent müsste jedoch noch genauer untersucht werden. Außerdem stellt sich die Frage, ob sich die Zeitersparnis durch diese Technologie deutlicher zeigt, wenn die Handwerker mehr mit ihr vertraut wären. 
+
+Augmented Reality Datenbrillen sind momentan noch zu unpraktisch, haben aber dennoch großes Potential für Handwerker. Die Technologie müsste dafür in zukünftigen Arbeiten mit mehr Handwerkern, größerem Funktionsumfang und direkt im Feld, auf der Baustelle getestet werden. Sobald die Technologie ausgereift ist, kann sie den Menschen in vielen Lebensbereichen unterstützten und die Art, wie wir mit der Welt interagieren, verändern.
